# rs-app-mail

./: .gitignore  Cargo.toml  Trunk.toml  env.json
backend/: Cargo.toml
backend/sql/: select_box_page.sql  select_notes.sql  select_notes_idp.sql  select_notes_position.sql  select_notes_test.sql  select_user.sql  select_user_login.sql  update.sql  update_notes.sql
backend/src/: constants.rs  db.rs  db_boxes.rs  db_notes.rs  db_types.rs  db_user.rs  filters.rs  main.rs  receive.rs  routes.rs  send.rs  sse.rs  state.rs  tasks.rs  types.rs  upload.rs  utils.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: connect_fetch.rs  connect_files.rs  connect_sse.rs  constants.rs  loader.rs  main.rs  state.rs  types.rs  utils.rs
frontend/src/dialog/: dialogs.rs  dialogs.scss
frontend/src/editor/: app_editor.rs  app_editor.scss  editor_tools.rs  editor_tools.scss  icons.rs  mod.rs  state.rs
frontend/src/elements/: app_body.rs  app_body.scss  app_header.rs  app_header.scss  app_login.rs  app_login.scss  app_message.rs  app_message.scss  app_root.rs  attachment.rs  attachment.scss  icons.rs  mod.rs
frontend/src/notes/: app_notes.rs  app_notes.scss  mod.rs  notes_content.rs  notes_content.scss  notes_events.rs  notes_events.scss
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs  types.rs  utils.rs
