[package]
name = "backend"
version = "0.1.0"
edition = "2021"
#edition.workspace = true

[dependencies]
shared = { path = "../shared" }

futures-util = "0.3"
deadpool-postgres="0.10"
postgres-types = "0.2"
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
tokio-stream = "0.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
once_cell="1"
sha2 = "0.10"
chrono="0.4"
uuid = { version = "1.1", features = ["v4"] }
headers = "0.3"
bytes="1.2"
mailparse="0.13"
mail-parser="0.7"
lol_html="0.3"
#notify="5.0"
lettre = {version="0.10", features = ["sendmail-transport"]}
lettre_email = "0.9"
#html2text="0.4"
mime_guess = "2.0"

tracing="0.1"
tracing-subscriber="0.3"