[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
#edition.workspace = true

[dependencies]
shared = { path = "../shared" }

futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures="0.4"
wasm-logger="0.2"
#gloo-net = { version = "0.2", features = ["websocket", "futures-channel", "futures-core", "futures-sink"] }
gloo-timers = { version = "0.2", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "Window", "Element", "DomStringMap", "EventListener", "Selection", "Range",
    "BinaryType", "Blob", "ErrorEvent", "FileReader", "MessageEvent", "ProgressEvent",
    "WebSocket", "Navigator",
    "Request", "RequestInit", "RequestMode", "Response", "RequestCredentials", "Headers",
    "EventSource", "HtmlSelectElement", "HtmlDocument", "NodeList","Storage", "UrlSearchParams",
    "FormData", "FileList", "File", "XmlHttpRequest", "XmlHttpRequestUpload"
    #"Url","SubtleCrypto", "Crypto","CryptoKey","TextEncoder"
]}

js-sys = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen="0.4"

lazy_static="1.4"
log = "0.4"

dominator = "0.5"
console_error_panic_hook = "0.1"
futures-signals = "0.3"
once_cell = "1.7"

